--- a/backend/package.json
+++ b/backend/package.json
@@ -13,12 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.3.1",
-    "express": "^5.2.1"
+    "express": "^5.2.1",
+    "mongoose": "^9.2.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.6",
-    "@types/node": "^25.2.3",
+    "@types/node": "^25.3.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
   }
